--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "postinstall": "prisma migrate deploy && prisma generate"
+    "postinstall": "npx prisma migrate deploy && npx prisma generate"
   },
   "dependencies": {
     "@melt-ui/svelte": "^0.86.6",
