fix: use npx for vite build to resolve Render CLI permission error

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "vite build"
+    "build": "npx vite build"
   },
   "dependencies": {
     "@melt-ui/svelte": "^0.86.6",
