--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "npx vite build"
+    "build": "npx prisma generate && npx vite build"
   },
   "dependencies": {
     "@melt-ui/svelte": "^0.86.6",
