fix: resolve Vercel build permission error with Prisma - Remove npx prefix from build commands to fix permission denied error - Add postinstall script to generate Prisma client after npm install - Follow Vercel best practices for Prisma deployment

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "npx prisma generate && npx vite build"
+    "build": "prisma generate && vite build",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@melt-ui/svelte": "^0.86.6",
