--- a/.env
+++ b/.env
@@ -6,5 +6,4 @@
 # Ensure the password is included if your database requires authentication.
 # Example: postgresql://user:password@host:port/database
 
-POSTGRES_URL="postgresql://postgres:123456789@localhost:5432/dc20-local"
-
+DATABASE_URL="postgresql://postgres:123456789@localhost:5432/dc20-local"
