--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   },
   "scripts": {
     "dev": "vite dev",
-    "build": "prisma generate && vite build",
-    "postinstall": "prisma generate"
+    "build": "vite build"
   },
   "dependencies": {
     "@melt-ui/svelte": "^0.86.6",
